--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="column3" style="border-top: solid 3px white;">
                 <h2>Datos personales</h2>
                 <p><strong>Email:</strong> guillemtalayero@gmail.com</p>
-                <p><strong>Ubicación:</strong> Sant Vicenç Dels Horts (08620)</p>
+                <p><strong>Ubicación:</strong> Sant Vicenç Dels Horts (08620) Barcelona</p>
                 <p><strong>Edad:</strong> 21 años</p>
             </div>
         </div>
