--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <p><strong>Accenture · Contrato de prácticas</strong> </p>
                             <p><strong>Duración:</strong> Enero 2023 - Junio 2023</p>
                             <p><strong>Horas:</strong> 400 horas</p>
-                            <p><strong>Responsabilidades:</strong> Gestión de cuentas PAM con herramienta Cyberark i Gestión de incidencias</p>
+                            <p><strong>Responsabilidades:</strong> Gestión de cuentas PAM con herramienta Cyberark y Gestión de incidencias</p>
 
 
 
@@ -120,7 +120,7 @@
                             <p><strong>Escola Pla de les Vinyes · Contrato de prácticas</strong> </p>
                             <p><strong>Duración:</strong> Octubre 2020 - Marzo 2021</p>
                             <p><strong>Horas:</strong> 264 horas</p>
-                            <p><strong>Responsabilidades:</strong> Mantenimiento de la página web i Gestión de incidencias informáticas del centro</p>
+                            <p><strong>Responsabilidades:</strong> Mantenimiento de la página web y Gestión de incidencias informáticas del centro</p>
 
 
 
